@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.825 2009/01/28 08:13:45 tr Exp $
+# $Id: CHANGES,v 1.826 2009/01/28 09:38:58 tr Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.4.0 beta1 (2009/??/??)
+ - (2009/01/28) Fixed bug# 3233 - Better error message when adding auto
+    responses with same name.
  - (2009/01/26) Removed the outdated function FetchrowHashref from DB.pm.
  - (2009/01/08) Fixed bug# 3571 - Output Filter Pre+Post of layout object will
     be use on any block, not on any template file like it was in 2.1-2.2. Moved
